--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -60,7 +60,9 @@
     <Analyzer Include="G:\Unity\Unity Editor\2022.3.44f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.Properties.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\GameScene\Health\InvincibilityController.cs" />
     <Compile Include="Assets\Scripts\GameScene\Health\HealthController.cs" />
+    <Compile Include="Assets\Scripts\GameScene\Player\PlayerDamagedInvincibility.cs" />
     <Compile Include="Assets\Scripts\GameScene\Player\PlayerMovement.cs" />
     <Compile Include="Assets\Scripts\GameScene\Enemy\EnemyAttack.cs" />
     <Compile Include="Assets\Scripts\GameScene\Enemy\PlayerAwarenessController.cs" />
