--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Assets\Scripts\GameScene\Player\PlayerMovement.cs" />
     <Compile Include="Assets\Scripts\GameScene\Enemy\EnemyAttack.cs" />
     <Compile Include="Assets\Scripts\GameScene\Enemy\PlayerAwarenessController.cs" />
+    <Compile Include="Assets\Scripts\GameScene\Enemy\EnemySpawner.cs" />
     <Compile Include="Assets\Scripts\GameScene\Player\Bullet.cs" />
     <Compile Include="Assets\Scripts\GameScene\Enemy\EnemyMovement.cs" />
     <Compile Include="Assets\Scripts\GameScene\Health\HealthBarUI.cs" />
