--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -75,12 +75,14 @@
     <Compile Include="Assets\Scripts\GameScene\Enemy\EnemySpawner.cs" />
     <Compile Include="Assets\Scripts\GameScene\Score\ScoreController.cs" />
     <Compile Include="Assets\Scripts\GameScene\Player\Bullet.cs" />
+    <Compile Include="Assets\Scripts\SceneFade.cs" />
     <Compile Include="Assets\Scripts\GameScene\Enemy\EnemyMovement.cs" />
     <Compile Include="Assets\Scripts\GameScene\Enemy\EnemyScoreAlocator.cs" />
     <Compile Include="Assets\Scripts\GameScene\GameManager.cs" />
     <Compile Include="Assets\Scripts\GameScene\Health\HealthBarUI.cs" />
     <Compile Include="Assets\Scripts\GameScene\Collectables\ICollectableBehaviour.cs" />
     <Compile Include="Assets\Scripts\MainMenu\MainMenu.cs" />
+    <Compile Include="Assets\Scripts\SceneController.cs" />
     <Compile Include="Assets\Scripts\GameScene\Player\PlayerShoot.cs" />
     <Compile Include="Assets\Scripts\GameScene\Enemy\EnemyDestroyController.cs" />
   </ItemGroup>
